# FlyTunnel

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
deploy/vps/: .env.example  .ssh.env.example  Dockerfile  README.md  docker-compose.yml  frps.toml.template
docs/vps/: frps.toml  setup.md
src/: index.html  main.js  styles.css  ui-helpers.js  ui-helpers.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: event_sink.rs  frpc_config.rs  frpc_log.rs  frpc_resolver.rs  lib.rs  main.rs  models.rs  process_manager.rs  settings.rs
src-tauri/tests/: local_e2e.rs
