[package]
name = "flytunnel"
version = "0.1.0"
description = "Minecraft LAN tunneling app powered by frp"
authors = ["thai"]
edition = "2021"
default-run = "flytunnel"

[lib]
name = "flytunnel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2"
flate2 = "1"
tar = "0.4"
rfd = "0.15"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
